gcc/testsuite/gdc.test/compilable/ice10486.d
void main()
{
    typeof(null) null_;
    int[1] sarr = null_;
}
