gcc/testsuite/gdc.test/fail_compilation/fail201.d
void main() {
        int c;
        c = c >>> 33;
}

